finished model validation

--- a/5_Evaluation/Flo/Model_Evaluation.ipynb
+++ b/5_Evaluation/Flo/Model_Evaluation.ipynb
@@ -6,13 +6,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-02T12:23:46.474684Z",
-     "start_time": "2024-10-02T12:23:37.175226Z"
+     "end_time": "2024-10-18T14:28:12.130760Z",
+     "start_time": "2024-10-18T14:28:12.128526Z"
     }
    },
    "source": "import pandas as pd",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -230,6 +230,203 @@
     "]"
    ],
    "id": "fc740993c9701e5f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-18T14:28:14.248111Z",
+     "start_time": "2024-10-18T14:28:14.227404Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "examples = pd.read_feather('model_predictions.feather')\n",
+    "examples"
+   ],
+   "id": "4a1019d5cc704537",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "              model_name  true_weight  predicted_weight    set_type  \\\n",
+       "0        resnet152_axial         61.0         68.712425       Train   \n",
+       "1        resnet152_axial         81.0         94.189095       Train   \n",
+       "2        resnet152_axial         73.0         85.938957       Train   \n",
+       "3        resnet152_axial         69.0         79.486198       Train   \n",
+       "4        resnet152_axial        101.0        127.005554       Train   \n",
+       "...                  ...          ...               ...         ...   \n",
+       "34403  vit_b_32_sagittal        104.0         76.492462  Validation   \n",
+       "34404  vit_b_32_sagittal         92.0         76.466599  Validation   \n",
+       "34405  vit_b_32_sagittal         78.0         76.463631  Validation   \n",
+       "34406  vit_b_32_sagittal         62.0         76.449074  Validation   \n",
+       "34407  vit_b_32_sagittal         53.0         76.391296  Validation   \n",
+       "\n",
+       "      additional_params         patient_id pixel_array_file  \n",
+       "0                  None  ANONYM-BI33HV_126     Scan_361.npy  \n",
+       "1                  None   ANONYM-XT8UJZ_76      Scan_82.npy  \n",
+       "2                  None   ANONYM-BI33HV_69     Scan_302.npy  \n",
+       "3                  None  ANONYM-BI33HV_441     Scan_682.npy  \n",
+       "4                  None  ANONYM-BI33HV_334     Scan_572.npy  \n",
+       "...                 ...                ...              ...  \n",
+       "34403              None  ANONYM-BI33HV_371     Scan_609.npy  \n",
+       "34404              None  ANONYM-BI33HV_251     Scan_486.npy  \n",
+       "34405              None   ANONYM-BI33HV_23     Scan_256.npy  \n",
+       "34406              None  ANONYM-BI33HV_285     Scan_523.npy  \n",
+       "34407              None   ANONYM-XT8UJZ_39      Scan_41.npy  \n",
+       "\n",
+       "[34408 rows x 7 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>true_weight</th>\n",
+       "      <th>predicted_weight</th>\n",
+       "      <th>set_type</th>\n",
+       "      <th>additional_params</th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>pixel_array_file</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>resnet152_axial</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>68.712425</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ANONYM-BI33HV_126</td>\n",
+       "      <td>Scan_361.npy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>resnet152_axial</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>94.189095</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ANONYM-XT8UJZ_76</td>\n",
+       "      <td>Scan_82.npy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>resnet152_axial</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>85.938957</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ANONYM-BI33HV_69</td>\n",
+       "      <td>Scan_302.npy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>resnet152_axial</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>79.486198</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ANONYM-BI33HV_441</td>\n",
+       "      <td>Scan_682.npy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>resnet152_axial</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>127.005554</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ANONYM-BI33HV_334</td>\n",
+       "      <td>Scan_572.npy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34403</th>\n",
+       "      <td>vit_b_32_sagittal</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>76.492462</td>\n",
+       "      <td>Validation</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ANONYM-BI33HV_371</td>\n",
+       "      <td>Scan_609.npy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34404</th>\n",
+       "      <td>vit_b_32_sagittal</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>76.466599</td>\n",
+       "      <td>Validation</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ANONYM-BI33HV_251</td>\n",
+       "      <td>Scan_486.npy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34405</th>\n",
+       "      <td>vit_b_32_sagittal</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>76.463631</td>\n",
+       "      <td>Validation</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ANONYM-BI33HV_23</td>\n",
+       "      <td>Scan_256.npy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34406</th>\n",
+       "      <td>vit_b_32_sagittal</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>76.449074</td>\n",
+       "      <td>Validation</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ANONYM-BI33HV_285</td>\n",
+       "      <td>Scan_523.npy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34407</th>\n",
+       "      <td>vit_b_32_sagittal</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>76.391296</td>\n",
+       "      <td>Validation</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ANONYM-XT8UJZ_39</td>\n",
+       "      <td>Scan_41.npy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>34408 rows × 7 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   },
   {
    "metadata": {},
