Modelling for bincount and segmentation

--- a/3_Data_Preparation/Justin/Segmentation_test.ipynb
+++ b/3_Data_Preparation/Justin/Segmentation_test.ipynb
@@ -1856,6 +1856,353 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Air</th>\n",
+       "      <th>Fat</th>\n",
+       "      <th>Soft tissue on contrast CT</th>\n",
+       "      <th>Bone Cancellous</th>\n",
+       "      <th>Bone Cortical</th>\n",
+       "      <th>Lung Parenchyma</th>\n",
+       "      <th>Kidney</th>\n",
+       "      <th>Liver</th>\n",
+       "      <th>Lymph nodes</th>\n",
+       "      <th>Muscle</th>\n",
+       "      <th>Thymus (Children)</th>\n",
+       "      <th>Thymus (Adolescents)</th>\n",
+       "      <th>White matter</th>\n",
+       "      <th>Grey matter</th>\n",
+       "      <th>SeriesInstanceUID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>79623669</td>\n",
+       "      <td>5076755</td>\n",
+       "      <td>3118276</td>\n",
+       "      <td>523225</td>\n",
+       "      <td>459430</td>\n",
+       "      <td>796006</td>\n",
+       "      <td>3423916</td>\n",
+       "      <td>3489164</td>\n",
+       "      <td>1255011</td>\n",
+       "      <td>4038437</td>\n",
+       "      <td>2703517</td>\n",
+       "      <td>9324504</td>\n",
+       "      <td>1558214</td>\n",
+       "      <td>2232151</td>\n",
+       "      <td>1.2.40.0.13.1.70506743092902795655309425996746...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>79623669</td>\n",
+       "      <td>5076755</td>\n",
+       "      <td>3118276</td>\n",
+       "      <td>523225</td>\n",
+       "      <td>459430</td>\n",
+       "      <td>796006</td>\n",
+       "      <td>3423916</td>\n",
+       "      <td>3489164</td>\n",
+       "      <td>1255011</td>\n",
+       "      <td>4038437</td>\n",
+       "      <td>2703517</td>\n",
+       "      <td>9324504</td>\n",
+       "      <td>1558214</td>\n",
+       "      <td>2232151</td>\n",
+       "      <td>1.2.40.0.13.1.22199141000052275677980158947820...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Air      Fat  Soft tissue on contrast CT  Bone Cancellous  \\\n",
+       "0  79623669  5076755                     3118276           523225   \n",
+       "1  79623669  5076755                     3118276           523225   \n",
+       "\n",
+       "   Bone Cortical  Lung Parenchyma   Kidney    Liver  Lymph nodes   Muscle  \\\n",
+       "0         459430           796006  3423916  3489164      1255011  4038437   \n",
+       "1         459430           796006  3423916  3489164      1255011  4038437   \n",
+       "\n",
+       "   Thymus (Children)  Thymus (Adolescents)  White matter  Grey matter  \\\n",
+       "0            2703517               9324504       1558214      2232151   \n",
+       "1            2703517               9324504       1558214      2232151   \n",
+       "\n",
+       "                                   SeriesInstanceUID  \n",
+       "0  1.2.40.0.13.1.70506743092902795655309425996746...  \n",
+       "1  1.2.40.0.13.1.22199141000052275677980158947820...  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = \"../../Data/bincount_HU_df.feather\"\n",
+    "bincount_df = pd.read_feather(path)\n",
+    "bincount_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>75</th>\n",
+       "      <th>150</th>\n",
+       "      <th>225</th>\n",
+       "      <th>300</th>\n",
+       "      <th>375</th>\n",
+       "      <th>450</th>\n",
+       "      <th>525</th>\n",
+       "      <th>600</th>\n",
+       "      <th>675</th>\n",
+       "      <th>...</th>\n",
+       "      <th>825</th>\n",
+       "      <th>900</th>\n",
+       "      <th>975</th>\n",
+       "      <th>1050</th>\n",
+       "      <th>1125</th>\n",
+       "      <th>1200</th>\n",
+       "      <th>1275</th>\n",
+       "      <th>1350</th>\n",
+       "      <th>1425</th>\n",
+       "      <th>SeriesInstanceUID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>105902576</td>\n",
+       "      <td>26886816</td>\n",
+       "      <td>4060661</td>\n",
+       "      <td>1282533</td>\n",
+       "      <td>810622</td>\n",
+       "      <td>586753</td>\n",
+       "      <td>487505</td>\n",
+       "      <td>457633</td>\n",
+       "      <td>471159</td>\n",
+       "      <td>504802</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4314044</td>\n",
+       "      <td>8404506</td>\n",
+       "      <td>6560169</td>\n",
+       "      <td>8650951</td>\n",
+       "      <td>2349743</td>\n",
+       "      <td>622883</td>\n",
+       "      <td>475708</td>\n",
+       "      <td>402654</td>\n",
+       "      <td>230240</td>\n",
+       "      <td>1.2.40.0.13.1.70506743092902795655309425996746...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>105902576</td>\n",
+       "      <td>26886816</td>\n",
+       "      <td>4060661</td>\n",
+       "      <td>1282533</td>\n",
+       "      <td>810622</td>\n",
+       "      <td>586753</td>\n",
+       "      <td>487505</td>\n",
+       "      <td>457633</td>\n",
+       "      <td>471159</td>\n",
+       "      <td>504802</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4314044</td>\n",
+       "      <td>8404506</td>\n",
+       "      <td>6560169</td>\n",
+       "      <td>8650951</td>\n",
+       "      <td>2349743</td>\n",
+       "      <td>622883</td>\n",
+       "      <td>475708</td>\n",
+       "      <td>402654</td>\n",
+       "      <td>230240</td>\n",
+       "      <td>1.2.40.0.13.1.22199141000052275677980158947820...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0        75      150      225     300     375     450     525  \\\n",
+       "0  105902576  26886816  4060661  1282533  810622  586753  487505  457633   \n",
+       "1  105902576  26886816  4060661  1282533  810622  586753  487505  457633   \n",
+       "\n",
+       "      600     675  ...      825      900      975     1050     1125    1200  \\\n",
+       "0  471159  504802  ...  4314044  8404506  6560169  8650951  2349743  622883   \n",
+       "1  471159  504802  ...  4314044  8404506  6560169  8650951  2349743  622883   \n",
+       "\n",
+       "     1275    1350    1425                                  SeriesInstanceUID  \n",
+       "0  475708  402654  230240  1.2.40.0.13.1.70506743092902795655309425996746...  \n",
+       "1  475708  402654  230240  1.2.40.0.13.1.22199141000052275677980158947820...  \n",
+       "\n",
+       "[2 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = \"../../Data/bincount_STEP_75_df.feather\"\n",
+    "bincount_df = pd.read_feather(path)\n",
+    "bincount_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>150</th>\n",
+       "      <th>300</th>\n",
+       "      <th>450</th>\n",
+       "      <th>600</th>\n",
+       "      <th>750</th>\n",
+       "      <th>900</th>\n",
+       "      <th>1050</th>\n",
+       "      <th>1200</th>\n",
+       "      <th>1350</th>\n",
+       "      <th>SeriesInstanceUID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>105902576</td>\n",
+       "      <td>4060661</td>\n",
+       "      <td>810622</td>\n",
+       "      <td>487505</td>\n",
+       "      <td>471159</td>\n",
+       "      <td>532482</td>\n",
+       "      <td>8404506</td>\n",
+       "      <td>8650951</td>\n",
+       "      <td>622883</td>\n",
+       "      <td>402654</td>\n",
+       "      <td>1.2.40.0.13.1.70506743092902795655309425996746...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>105902576</td>\n",
+       "      <td>4060661</td>\n",
+       "      <td>810622</td>\n",
+       "      <td>487505</td>\n",
+       "      <td>471159</td>\n",
+       "      <td>532482</td>\n",
+       "      <td>8404506</td>\n",
+       "      <td>8650951</td>\n",
+       "      <td>622883</td>\n",
+       "      <td>402654</td>\n",
+       "      <td>1.2.40.0.13.1.22199141000052275677980158947820...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0      150     300     450     600     750      900     1050  \\\n",
+       "0  105902576  4060661  810622  487505  471159  532482  8404506  8650951   \n",
+       "1  105902576  4060661  810622  487505  471159  532482  8404506  8650951   \n",
+       "\n",
+       "     1200    1350                                  SeriesInstanceUID  \n",
+       "0  622883  402654  1.2.40.0.13.1.70506743092902795655309425996746...  \n",
+       "1  622883  402654  1.2.40.0.13.1.22199141000052275677980158947820...  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "path = \"../../Data/bincount_STEP_150_df.feather\"\n",
+    "bincount_df = pd.read_feather(path)\n",
+    "bincount_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
