--- a/5_Evaluation/Patrick/Model_Evaluation.ipynb
+++ b/5_Evaluation/Patrick/Model_Evaluation.ipynb
@@ -279,6 +279,25 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "601e52fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['resnet_18_best' 'resnet_10_best' 'resnet_50_pre_best']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print unique models\n",
+    "print(df['model_name'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "51c3f167af5726a3",
    "metadata": {
     "ExecuteTime": {
