--- a/5_Evaluation/Justin/Final_Evaluation.ipynb
+++ b/5_Evaluation/Justin/Final_Evaluation.ipynb
@@ -6160,6 +6160,54 @@
     "\n",
     "final_seg_df.to_csv(\"final_seg_df.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Best models segmentation\n",
+    "# Best: PredictedPatientWeight_predictions_volumeAndCount_colDropVolume_keepOrig_seg_75\n",
+    "# Middle: PredictedPatientWeight_predictions_onlyCount_colKeepAll_keepOrig_seg_air\n",
+    "# Worst: PredictedPatientWeight_predictions_onlyCount_colDropVolume_keepOrig_seg\n",
+    "\n",
+    "# Best model histogram\n",
+    "# Best: PredictedPatientWeight_predictions_volumeAndCount_colKeepAll_keepOrig_bincount_75\n",
+    "# Middle: PredictedPatientWeight_predictions_volumeAndCount_colDropVolume_keepOrig_bincount_150\n",
+    "# Worst: PredictedPatientWeight_predictions_onlyCount_colKeepAll_keepOrig_HU\n",
+    "\n",
+    "best_hist_df = dfs[\"predictions_volumeAndCount_colKeepAll_keepOrig_bincount_75\"]\n",
+    "middle_hist_df = dfs[\"predictions_volumeAndCount_colDropVolume_keepOrig_bincount_150\"]\n",
+    "worst_hist_df = dfs[\"predictions_onlyCount_colKeepAll_keepOrig_HU\"]\n",
+    "\n",
+    "best_hist_df = pd.merge(best_hist_df, meta_df, on=\"SeriesInstanceUID\", how=\"inner\")\n",
+    "best_hist_df[\"Model\"] = \"Best_Histogram\"\n",
+    "best_hist_df[\"Deviation\"] = best_hist_df[\"PatientWeight\"] - best_hist_df[\"PredictedPatientWeight\"]\n",
+    "best_hist_df = pd.merge(best_hist_df, train_test_split_df, on=\"SeriesInstanceUID\", how=\"inner\")\n",
+    "\n",
+    "final_hist_df = best_hist_df[[\"Model\", \"PatientWeight\", \"PredictedPatientWeight\", \"Deviation\"]]\n",
+    "final_hist_df = final_hist_df.rename(columns={\"PredictedPatientWeight\": \"Prediction\", \"PatientWeight\": \"Actual\"})\n",
+    "\n",
+    "middle_hist_df = pd.merge(middle_hist_df, meta_df, on=\"SeriesInstanceUID\", how=\"inner\")\n",
+    "middle_hist_df[\"Model\"] = \"Middle_Histogram\"\n",
+    "middle_hist_df[\"Deviation\"] = middle_hist_df[\"PatientWeight\"] - middle_hist_df[\"PredictedPatientWeight\"]\n",
+    "middle_hist_df = pd.merge(middle_hist_df, train_test_split_df, on=\"SeriesInstanceUID\", how=\"inner\")\n",
+    "middle_hist_df = middle_hist_df[[\"Model\", \"PatientWeight\", \"PredictedPatientWeight\", \"Deviation\"]]\n",
+    "middle_hist_df = middle_hist_df.rename(columns={\"PredictedPatientWeight\": \"Prediction\", \"PatientWeight\": \"Actual\"})\n",
+    "\n",
+    "worst_hist_df = pd.merge(worst_hist_df, meta_df, on=\"SeriesInstanceUID\", how=\"inner\")\n",
+    "worst_hist_df[\"Model\"] = \"Worst_Histogram\"\n",
+    "worst_hist_df[\"Deviation\"] = worst_hist_df[\"PatientWeight\"] - worst_hist_df[\"PredictedPatientWeight\"]\n",
+    "worst_hist_df = pd.merge(worst_hist_df, train_test_split_df, on=\"SeriesInstanceUID\", how=\"inner\")\n",
+    "worst_hist_df = worst_hist_df[[\"Model\", \"PatientWeight\", \"PredictedPatientWeight\", \"Deviation\"]]\n",
+    "worst_hist_df = worst_hist_df.rename(columns={\"PredictedPatientWeight\": \"Prediction\", \"PatientWeight\": \"Actual\"})\n",
+    "\n",
+    "final_hist_df = pd.concat([final_hist_df, middle_hist_df, worst_hist_df])\n",
+    "final_hist_df\n",
+    "\n",
+    "final_hist_df.to_csv(\"final_hist_df.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
